# requests-iamauth

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pytest.yml
iamauth/: __init__.py  __main__.py  sigv4.py  sigv4a.py
tests/: test_iamauth.py  test_iamcurl.py  test_sigv4.py  test_sigv4a.py
